// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`FLPText > renders as expected 1`] = `
<div>
  <p
    class="chakra-text css-au19fy"
  >
    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nemo quaerat repellendus numquam et esse ut labore molestias nihil optio expedita atque, quas eligendi corrupti quasi impedit suscipit sunt.
  </p>
</div>
`;

exports[`FLPText > renders as expected with a fontSiez 1`] = `
<div>
  <p
    class="chakra-text css-gjwspf"
  >
    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nemo quaerat repellendus numquam et esse ut labore molestias nihil optio expedita atque, quas eligendi corrupti quasi impedit suscipit sunt.
  </p>
</div>
`;

exports[`FLPText > renders as expected with a fontWeight 1`] = `
<div>
  <p
    class="chakra-text css-18lx95u"
  >
    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nemo quaerat repellendus numquam et esse ut labore molestias nihil optio expedita atque, quas eligendi corrupti quasi impedit suscipit sunt.
  </p>
</div>
`;

exports[`FLPText > renders as expected with a letterSpacing 1`] = `
<div>
  <p
    class="chakra-text css-1rf05do"
  >
    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nemo quaerat repellendus numquam et esse ut labore molestias nihil optio expedita atque, quas eligendi corrupti quasi impedit suscipit sunt.
  </p>
</div>
`;

exports[`FLPText > renders as expected with a lineHeight 1`] = `
<div>
  <p
    class="chakra-text css-uy92jq"
  >
    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nemo quaerat repellendus numquam et esse ut labore molestias nihil optio expedita atque, quas eligendi corrupti quasi impedit suscipit sunt.
  </p>
</div>
`;
